fix: [CDNG-8530]: fix overflow issue in error handler (#3442)

--- a/src/modules/10-common/components/ErrorHandler/ErrorHandler.module.scss
+++ b/src/modules/10-common/components/ErrorHandler/ErrorHandler.module.scss
@@ -10,7 +10,14 @@
   .link {
     word-break: break-all;
   }
+  .text {
+    word-break: break-word;
+  }
   .linkSmall {
     font-size: var(--font-size-small);
   }
+}
+
+.shrink {
+  flex-shrink: 1 !important;
 }
